[workspace]
resolver = "2"
members = [
  "examples/run_wasm",
  #"examples/lottie_player",
  #"examples/drag_n_drop",
  "examples/text",
  "examples/scene",
  "examples/scene_ui",
  #"examples/lottie",
  #"examples/lottie_ui",
  "examples/svg",
  "examples/svg_ui",
  "examples/render_layers",
  "examples/cube3d",
  "examples/headless",
  "examples/diagnostics",
  #"examples/view_culling",
  #"examples/scaling",
]

[workspace.package]
edition = "2024"
version = "0.10.3"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/linebender/bevy_vello"

[workspace.dependencies]
bevy = { version = "0.17.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_window",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "multi_threaded",
  "x11",
  "tonemapping_luts",
  "zstd_rust",
  "bevy_sprite",
  "bevy_sprite_render",
] }

[package]
name = "bevy_vello"
description = "Render assets and scenes in Bevy with Vello"
authors = [
  "Sebastian Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
keywords = ["gamedev", "graphics"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
# Ensure this version stays up to date with the README
vello = "0.6.0"
thiserror = "2.0.11"
vello_svg = { version = "0.7.1", optional = true }
#velato = { version = "0.6.0", optional = true }
tracing = "0.1.41"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parley = { version = "0.6.0", optional = true, features = ["system"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parley = { version = "0.6.0", optional = true, default-features = false, features = [
  "std",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = []
svg = ["vello_svg"]
#lottie = ["velato"]
text = ["parley"]
default_font = ["bevy/default_font", "text"]
