[workspace]
resolver = "2"
members = [
  "examples/run_wasm",
  "examples/lottie_player",
  "examples/drag_n_drop",
  "examples/text",
  "examples/text_ui_clipping",
  "examples/scene",
  "examples/scene_screenspace",
  "examples/scene_ui",
  "examples/lottie",
  "examples/lottie_screenspace",
  "examples/lottie_ui",
  "examples/picking",
  "examples/svg",
  "examples/svg_screenspace",
  "examples/svg_ui",
  "examples/render_layers",
  "examples/cube3d",
  "examples/headless",
  "examples/diagnostics",
  "examples/view_culling",
  "examples/scaling",
]

[workspace.package]
edition = "2024"
version = "0.13.1"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/linebender/bevy_vello"

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "default_app",
  "2d_bevy_render",
  "ui_bevy_render",
] }

[package]
name = "bevy_vello"
description = "Render assets and scenes in Bevy with Vello"
keywords = ["gamedev", "graphics"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true }
imaging = "0.0.1"
imaging_vello = { version = "0.0.1", default-features = false, features = ["vello-0-7"] }
# Ensure this version stays up to date with the README
vello = "0.7.0"
thiserror = "2.0.18"
svg_imaging = { version = "0.0.1", optional = true }
velato = { version = "0.10.0", optional = true }
velato_imaging = { version = "0.0.1", optional = true }
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parley = { version = "0.7.0", optional = true, features = ["system"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parley = { version = "0.7.0", optional = true, default-features = false, features = [
  "std",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.64"

[features]
default = []
picking = ["bevy/bevy_picking"]
svg = ["dep:svg_imaging"]
lottie = ["dep:velato", "dep:velato_imaging"]
text = ["parley"]
default_font = ["bevy/default_font", "text"]
