[package]
name = "demo"
description = "The vellottie demo"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy-vello = { path = "../", features = ["debug"] }
bevy = { workspace = true }


# These settings are to get the WASM blob smaller for the demo.
[profile.release]
codegen-units = 1
opt-level = 'z'
