[package]
name = "demo"
description = "The vellottie demo"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy-vello = { path = "../../", features = ["debug"] }
bevy = { workspace = true }
