[package]
name = "drag-n-drop"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy-vello = { path = "../../" }
bevy = { workspace = true }
# FIXME: Remove later on, web-sys got angry in v0.3.38.
web-sys = { workspace = true }
