[package]
name = "headless"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_vello = { path = "../../", features = ["svg", "text", "default_font"] }
bevy = { workspace = true, features = ["png"] }
