[package]
name = "lottie_player"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_vello = { path = "../../", features = ["lottie"] }
bevy = { workspace = true }
bevy_pancam = { version = "0.19", features = ["bevy_egui"] }
bevy_egui = "0.37"
tracing = "0.1.41"
