[package]
name = "lottie_player"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true, features = [
  "bevy_gizmos",
  "bevy_ui_debug",
  "ui_picking",
] }
bevy_vello = { path = "../../", features = ["lottie", "picking"] }
bevy_egui = "0.39.0"
tracing = "0.1.43"
