[package]
name = "lottie_ui"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_vello = { path = "../../", features = ["lottie"] }
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_ui_debug"] }
